--- a/Net6Fundamentals/Views/Shared/_Layout.cshtml
+++ b/Net6Fundamentals/Views/Shared/_Layout.cshtml
@@ -23,9 +23,11 @@
                             <a asp-controller="Home" asp-action="Index" class="nav-link">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a asp-controller="Pie" asp-action="List" class="nav-link">Pies</a>
+                            <a asp-controller="Contact" asp-action="Index" class="nav-link">Contact</a>
                         </li>
+                        <vc:category-menu></vc:category-menu>
                     </ul>
+                    <vc:shopping-cart-summary></vc:shopping-cart-summary>
                 </div>
             </div>
         </nav>
@@ -38,7 +40,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - Net6Fundamentals - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2022 - .Net6 Fundamentals
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
