--- a/Net6Fundamentals/Views/_ViewImports.cshtml
+++ b/Net6Fundamentals/Views/_ViewImports.cshtml
@@ -1,3 +1,7 @@
 ﻿@using Net6Fundamentals
 @using Net6Fundamentals.Models
+@using Net6Fundamentals.Components
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Net6Fundamentals
+@addTagHelper Net6Fundamentals.TagHelpers.*, Net6Fundamentals
