Added Authentication and Authorization

--- a/Net6Fundamentals/Views/Shared/_Layout.cshtml
+++ b/Net6Fundamentals/Views/Shared/_Layout.cshtml
@@ -30,6 +30,7 @@
                         </li>
                         <vc:category-menu></vc:category-menu>
                     </ul>
+                    <partial name="_LoginPartial" />
                     <vc:shopping-cart-summary></vc:shopping-cart-summary>
                 </div>
             </div>
